# eventlog

./: .arch-inventory  .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  PORTS  README  aclocal.m4  autogen.sh  balabit-unix-build  balabit-vs-build  configure.in  eventlog.pc.in  eventlog.spec.bb.in
debian/: changelog
doc/: DESIGN.txt
solbuild/: pkgmaker.sh  rules
src/: Makefile  Makefile.am  Makefile.in  evt_internals.h  evtctx.c  evtfmt.c  evtlog.h  evtrec.c  evtstr.c  evttags.c  makefile.msc
tests/: Makefile  Makefile.am  Makefile.in
tgz2build/: .libevtlog-dev.files.swp  libevtlog-dev.files  libevtlog0.files  rules
winbuild/: Makefile.am
