
SUBDIRS = src tests

EXTRA_DIST = NEWS PORTS CREDITS doc/API.txt doc/DESIGN.txt doc/configuration.txt \
	debian/changelog debian/compat debian/control debian/copyright \
	debian/libevtlog-dev.install debian/libevtlog0.install debian/libevtlog0.shlibs debian/rules

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = eventlog.pc

