dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/evtrec.c)
AM_INIT_AUTOMAKE(eventlog, "0.2.2", 1)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC

CFLAGS="-Wall -g"
CPPFLAGS="-D_GNU_SOURCE"

AC_ARG_ENABLE(dlsym-wrapper,
	[  --enable-dlsym-wrapper	Enable dlsym based syslog wrapper],
	enable_dlsym_wrapper=yes)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strerror)

if test x$enable_dlsym_wrapper = xyes; then
	AC_CHECK_LIB(dl, dlsym)
	AC_DEFINE(ENABLE_DLSYM_WRAPPER, 1, [enable DLSYM wrapper])
fi

AC_OUTPUT(Makefile src/Makefile tests/Makefile eventlog.pc)
